// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`review screen e2e initial render: progress strip + first record + primary prediction 1`] = `
"                                                                                                    
  LabelLens  tiny.jsonl  Pending  1 / 10           Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                    
  Pending ────────────────────────────────────────────────────────────  1 / 10                      
                                                                                                    
                                                                                                    
                                                                                                    
 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │ ▶ Lunch at Zomato Bangalore                                                                    │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────┘ 
  █ Uber ride to airport                                                                            
  ▆ Amazon order #12345                                                                             
                                                                                                    
  prediction ────────────────────────────────────────────────────────────                           
  label      ◇ food                                                                                 
  confidence ########-  92%                                                                         
  source     [llm:gpt-4]                                                                            
                                                                                                    
  labels ────────────────────────────────────────────────────────────                               
  ▸1 food 92%     2 travel     3 other                                                              
                                                                                                    
                                                                                                    
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note ┊[gd] doc ┊[Q] queues ┊[:] palette ┊[t] … 
                                                                                                    
"
`;

exports[`review screen e2e pressing 'a' writes an accepted review row and advances counter 1`] = `
"                                                                                                    
  LabelLens  tiny.jsonl  Pending  1 / 9             Reviewed: 1 / 10  ·  Skipped: 0  ·  Pending: 9  
                                                                                                    
  Pending ────────────────────────────────────────────────────────────  1 / 9                       
                                                                                                    
                                                                                                    
                                                                                                    
 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │ ▶ Uber ride to airport                                                                         │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────┘ 
  ▆ Amazon order #12345                                                                             
  ▄ Netflix monthly                                                                                 
                                                                                                    
  prediction ────────────────────────────────────────────────────────────                           
  label      ◇ travel                                                                               
  confidence ########-  88%                                                                         
  source     [llm:gpt-4]                                                                            
                                                                                                    
  labels ────────────────────────────────────────────────────────────                               
   1 food    ▸2 travel 88%     3 other                                                              
                                                                                                    
  history  + food      [u] undo                                                                     
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note ┊[gd] doc ┊[Q] queues ┊[:] palette ┊[t] … 
                                                                                                    
"
`;

exports[`review screen e2e pressing 'j' moves to the next record without writing a review 1`] = `
"                                                                                                    
  LabelLens  tiny.jsonl  Pending  2 / 10           Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                    
  Pending ────────────────────────────────────────────────────────────  2 / 10                      
                                                                                                    
                                                                                                    
  █ Lunch at Zomato Bangalore                                                                       
 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │ ▶ Uber ride to airport                                                                         │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────┘ 
  ▆ Amazon order #12345                                                                             
  ▄ Netflix monthly                                                                                 
                                                                                                    
  prediction ────────────────────────────────────────────────────────────                           
  label      ◇ travel                                                                               
  confidence ########-  88%                                                                         
  source     [llm:gpt-4]                                                                            
                                                                                                    
  labels ────────────────────────────────────────────────────────────                               
   1 food    ▸2 travel 88%     3 other                                                              
                                                                                                    
                                                                                                    
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note ┊[gd] doc ┊[Q] queues ┊[:] palette ┊[t] … 
                                                                                                    
"
`;

exports[`review screen e2e pressing 'a' across all records empties pending and shows completion 1`] = `
"                                                                                                    
  LabelLens  tiny.jsonl  Pending  0 / 0            Reviewed: 10 / 10  ·  Skipped: 0  ·  Pending: 0  
                                                                                                    
  Pending ────────────────────────────────────────────────────────────  0 / 0                       
                                                                                                    
                                                                                                    
                                                                                                    
     *  All records reviewed                                                                        
                                                                                                    
      [/] switch queue · [q] quit                                                                   
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  labels ────────────────────────────────────────────────────────────                               
   1 food     2 travel     3 other                                                                  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  history  + ENTRY_START   ·   + food   ·   + other   ·   + food   ·   + rent      [u] undo         
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note ┊[gd] doc ┊[Q] queues ┊[:] palette ┊[t] … 
                                                                                                    
"
`;
